Closed Bug 1569146 Opened 6 years ago Closed 6 years ago

Twitter is not saving to history sidebar after one visit

Categories

(Firefox :: Bookmarks & History, defect, P1)

69 Branch
defect
Points:
5

Tracking

()

RESOLVED FIXED
Firefox 70
Iteration:
70.3 - Aug 5 - 18
Tracking Status
firefox70 --- fixed

People

(Reporter: pciapa, Assigned: mak)

References

()

Details

Attachments

(2 files)

Attached image 2019-07-26 14.40.49.jpg

Twitter is not saving to history sidebar (Hamburger menu -> Library -> History -> View history Sidebar - Today) after first navigating

Steps to reproduce:

  1. Open Firefox
  2. navigate 'https://twitter.com/')
  3. open History sidebar -> Today
  4. twitter website is not present in list of visited websites

Firefox version: 69 0b7

I can reproduce this as well on latest nightly. I can't reproduce with other sites, and it seems to be when Twitter is first navigated to.

This makes me wonder if it could be the Twitter site doing something weird.

Marco, any ideas here?

Flags: needinfo?(mak77)

I suspect a redirect, but I'm not sure why the target is not there. it should be debugged in history.cpp

I'm looking into it, hopefully I can find the problem.

Assignee: nobody → mak77
Status: NEW → ASSIGNED
Iteration: --- → 70.3 - Aug 5 - 18
Flags: needinfo?(mak77)
Priority: -- → P1

Apparently the first visit is a redirect, and the second visit gets the same identical url passed-in as lastVisitedURI, so history thinks it's a reload and skips it. I'm not sure why the docshell is telling us the page redirects to itself, so next investigation is in the docshell.

In the end the problem is that history flood protection is too aggressive in this case, we should always try to have an unhidden visit, even if the same uri is visited repeatedly.

Points: --- → 5

The history anti-flooding system prevents repeated loads of the same url from
flooding history, generating bogus frecency values.
In some cases though, like a page redirecting to itself, it may be overzealous.
A redirect source is always marked as hidden, and if the page redirects to
itself the second visit will be skipped, because repeated.
We always want to haveat least one unhidden visit in that case, thus we can
skip the anti-flooding check if the page will be unhidden.

Pushed by mak77@bonardo.net: https://hg.mozilla.org/integration/autoland/rev/1d01a8a08ebf a page redirecting to itself should appear in history. r=Standard8
Regressions: 1571927
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 70

Following the STR from the first comment and I couldn't reproduce the bug. Could you verify if the issue is fixed using this build: https://archive.mozilla.org/pub/firefox/candidates/70.0b7-candidates/build1/ ?
Thank you!

Flags: qe-verify+ → needinfo?(pciapa)

(In reply to Negritas Sergiu from comment #9)

Following the STR from the first comment and I couldn't reproduce the bug. Could you verify if the issue is fixed using this build: https://archive.mozilla.org/pub/firefox/candidates/70.0b7-candidates/build1/ ?
Thank you!

Sorry, I can't, this is out of scope of my responsibilities.

Flags: needinfo?(pciapa)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: