Bug 1569146 - a page redirecting to itself should appear in history. r=Standard8

The history anti-flooding system prevents repeated loads of the same url from
flooding history, generating bogus frecency values.
In some cases though, like a page redirecting to itself, it may be overzealous.
A redirect source is always marked as hidden, and if the page redirects to
itself the second visit will be skipped, because repeated.
We always want to haveat least one unhidden visit in that case, thus we can
skip the anti-flooding check if the page will be unhidden.

Differential Revision: https://phabricator.services.mozilla.com/D40426

--HG--
extra : moz-landing-system : lando